# x-growth-ai

./: .dockerignore  .gitignore  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/config/: stock_screen_rules.json  watchlist.json
backend/src/backend/: __init__.py  cli.py
backend/src/backend/agent_tools/: __init__.py  registry.py
backend/src/backend/analysis/: __init__.py  daily_compare.py  data_status.py  kline_patterns.py  market_regime.py
backend/src/backend/api/: __init__.py  app.py  db.py  services.py
backend/src/backend/backtest/: __init__.py  engine.py  indicators.py  strategies.py  technical.py
backend/src/backend/data_sources/: __init__.py  a_stock_data.py  baostock_data.py  finclaw.py  mx_finance_data.py  mx_hotspot.py  mx_stocks_screener.py
backend/src/backend/knowledge/: __init__.py  strategy_library.py
backend/src/backend/knowledge/strategies/: SOURCE.md
backend/src/backend/report/: __init__.py  daily_review.py  stock_screen.py  watchlist.py  weekly_review.py
backend/src/backend/storage/: __init__.py  daily_store.py
backend/tests/: test_agent_tools.py  test_api_services.py  test_kline_patterns.py  test_strategy_library.py  test_technical_backtest.py
database/: README.md  backfill_qfq_to_yesterday.py  bs_qfq_downloader.py  requirements.txt  update_daily.py
deploy/: README.server.md  nginx.conf  pack-for-server.sh
doc/: 2026-06-09-macd-kdj-rsi-strategy-learning.md  2026-06-11-xu-xiaoming-td9-quant-learning.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
(+155 files in other folders)
